feat: implement user module with create and update functionality, including DTOs and service integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,16 @@
 {
     "cSpell.words": [
+        "Alimentação",
         "Categorys",
         "dpage",
+        "Educação",
         "fincheck",
+        "Lazer",
         "pgadmin",
-        "pgdata"
+        "pgdata",
+        "Roupas",
+        "Salário",
+        "Transporte",
+        "Viagem"
     ]
 }
